2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	Bug 568294 – A wrong reference in the description of 
	g_bookmark_file_add_application()

	* glib/gbookmarkfile.c (g_bookmark_file_add_application):
	Fix a typo in the docs. Pointed out by Takeshi Aihana

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.5 ===

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c (g_strdup_printf): Fix a doc typo.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 512779 – --disable-regex breaks compilation
	
	* configure.in: Define an ENABLE_REGEX macro

	* gobject/gboxed.c: Don't refer to g_regex_ref if ENABLE_REGEX
	is not defined.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbsearcharray.h: Quell some compiler warnings.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre: Update to PCRE 7.8

2009-01-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 567977 – textdomain() macro should not return NULL when 
	ENABLE_NLS is not set

	* glib/glibintl.h: If !ENABLE_NLS, make textomain() macro 
	return "messages" in case of a NULL argument. Patch by
	Peter Kjellerstedt.

2009-01-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 567838 – G_STRUCT_OFFSETOF fails to compile under icc 9.1

	* glib/gmacros.h (G_STRUCT_OFFSETOF): Use offsetof instead of 
	__builtin_offsetof, for icc's sake. Proposed by Hrvoje Niksic.

2009-01-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 564728 Add function to decode base64 encoded data in place

	* glib/glib.symbols:
	* glib/gbase64.[hc] (g_base64_decode_inplace): New convenience
	API to decode in place, overwriting the input string. Patch by
	Sebastian Dröge.

2009-01-12  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/gtestutils.c (g_strcmp0): Be more explicit about the NULL
	handling in the docs.

2009-01-12  Tor Lillqvist  <tml@novell.com>

	* glib/goption.c (parse_arg): Guard against a mis-written